--- a/processingv2.html
+++ b/processingv2.html
@@ -41,6 +41,39 @@
   h2{font-size:14px;margin:10px 0;color:#222;}
   h3{font-size:13px;margin:12px 0 8px;color:#222;}
 
+  .tabs{
+    display:flex;
+    gap:8px;
+    margin-bottom:12px;
+  }
+
+  .tabButton{
+    padding:8px 12px;
+    border-radius:999px;
+    border:1px solid var(--border);
+    background:#fff;
+    color:#222;
+    font-weight:700;
+    cursor:pointer;
+  }
+
+  .tabButton.active{
+    background:#111;
+    color:#fff;
+    border-color:#111;
+  }
+
+  .tabPanel{ display:none; }
+  .tabPanel.active{ display:block; }
+
+  .section{
+    border:1px solid #eee;
+    border-radius:12px;
+    padding:12px;
+    background:#fcfcfc;
+    margin-bottom:12px;
+  }
+
   .row{
     display:grid;
     grid-template-columns: 150px 1fr;
@@ -105,19 +138,29 @@
   }
 
   /* Table */
-  table{
+table{
     width:100%;
     border-collapse:collapse;
     font-size:13px;
     margin-top:10px;
+    background:#fff;
   }
   th, td{
     border-bottom:1px solid #eee;
-    padding:8px 6px;
+    padding:10px 8px;
     vertical-align:top;
   }
   th{ text-align:left; font-size:12px; color:#333; }
+  td{ line-height:1.4; }
   tr:hover td{ background:#fafafa; }
+
+  .tableWrap{
+    overflow:auto;
+    border:1px solid #eee;
+    border-radius:12px;
+    padding:6px;
+    background:#fff;
+  }
 
   .pill{
     display:inline-block;
@@ -235,150 +278,234 @@
 <body>
 <div class="app">
 
-  <!-- LEFT -->
+<!-- LEFT -->
   <div class="panel">
     <h1>Book Processing Dashboard v2.0</h1>
 
-    <h2>Scan / Find</h2>
-    <div class="row">
-      <label for="scan">Scan barcode</label>
-      <input id="scan" class="mono" type="text" placeholder="Scan here (Enter loads/creates)" />
+    <div class="tabs" role="tablist">
+      <button class="tabButton active" type="button" data-tab="processing">Processing</button>
+      <button class="tabButton" type="button" data-tab="orders">Book Orders</button>
     </div>
 
-    <div class="row">
-      <label for="search">Search</label>
-      <input id="search" type="text" placeholder="Title or barcode…" />
-    </div>
+    <div id="tab-processing" class="tabPanel active">
+      <div class="section">
+        <h2>Scan / Find</h2>
+        <div class="row">
+          <label for="scan">Scan barcode</label>
+          <input id="scan" class="mono" type="text" placeholder="Scan here (Enter loads/creates)" />
+        </div>
 
-    <div class="filters">
-      <div>
-        <label for="filterSpecial" style="font-size:13px;">Special handling</label>
-        <select id="filterSpecial">
-          <option value="">All</option>
-          <option value="1">Special only</option>
-          <option value="0">Not special</option>
-        </select>
+        <div class="row">
+          <label for="search">Search</label>
+          <input id="search" type="text" placeholder="Title or barcode…" />
+        </div>
+
+        <div class="filters">
+          <div>
+            <label for="filterSpecial" style="font-size:13px;">Special handling</label>
+            <select id="filterSpecial">
+              <option value="">All</option>
+              <option value="1">Special only</option>
+              <option value="0">Not special</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="showDone" style="font-size:13px;">Done items</label>
+            <select id="showDone">
+              <option value="0">Hide done</option>
+              <option value="1">Show done</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="viewMode" style="font-size:13px;">View</label>
+            <select id="viewMode">
+              <option value="all">All</option>
+              <option value="top10">Top 10 priority</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="hint">
+          Priority score is automatic. Aging points only apply when <strong>Received=YES</strong> and the item is not Done.
+        </div>
       </div>
 
-      <div>
-        <label for="showDone" style="font-size:13px;">Done items</label>
-        <select id="showDone">
-          <option value="0">Hide done</option>
-          <option value="1">Show done</option>
-        </select>
+      <div class="section">
+        <h2>Item editor</h2>
+
+        <div class="row">
+          <label for="barcode">Barcode</label>
+          <input id="barcode" class="mono" type="text" placeholder="ISBN placeholder or real barcode" />
+        </div>
+
+        <div class="row">
+          <label for="title">Title</label>
+          <input id="title" type="text" placeholder="Title / Author" />
+        </div>
+
+        <div class="row">
+          <label for="received">Received</label>
+          <select id="received">
+            <option>NO</option>
+            <option>YES</option>
+          </select>
+        </div>
+
+        <h3>Processing Status (YES/NO)</h3>
+
+        <div class="row">
+          <label for="cataloged">Cataloged</label>
+          <select id="cataloged"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <div class="row">
+          <label for="spine">Spine label</label>
+          <select id="spine"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <div class="row">
+          <label for="covered">Covered</label>
+          <select id="covered"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <h3>Context</h3>
+
+        <div class="row">
+          <label for="holdName">Hold for</label>
+          <input id="holdName" type="text" placeholder="Name (blank = no hold)" />
+        </div>
+
+        <div class="row">
+          <label for="adoptedAmt">Adopted $</label>
+          <input id="adoptedAmt" type="number" min="0" step="0.01" placeholder="0.00" />
+        </div>
+
+        <div class="row">
+          <label for="bookplate">Bookplate printed</label>
+          <select id="bookplate"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <div class="row">
+          <label for="donated">Donated</label>
+          <select id="donated"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <h3>Slip tracking</h3>
+
+        <div class="row">
+          <label for="slipPrinted">Slip printed</label>
+          <input id="slipPrinted" type="text" disabled />
+        </div>
+
+        <div class="row">
+          <label for="printedAt">Printed for</label>
+          <input id="printedAt" type="text" disabled />
+        </div>
+
+        <div class="btnRow">
+          <button onclick="printSlip()">Print slip</button>
+          <button class="secondary" onclick="saveItem()">Save item</button>
+        </div>
+
+        <div class="btnRow">
+          <button class="secondary" onclick="clearEditor()">Clear</button>
+          <button class="danger" onclick="deleteItem()">Delete</button>
+        </div>
       </div>
 
-      <div>
-        <label for="viewMode" style="font-size:13px;">View</label>
-        <select id="viewMode">
-          <option value="all">All</option>
-          <option value="top10">Top 10 priority</option>
-        </select>
+      <div class="section">
+        <h2>Items</h2>
+        <div id="summary" class="hint"></div>
+        <div class="tableWrap">
+          <table>
+            <thead>
+              <tr>
+                <th>Priority</th>
+                <th>Done</th>
+                <th>Title</th>
+                <th>Barcode</th>
+                <th>Flags</th>
+                <th>Slip</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="itemsTable"></tbody>
+          </table>
+        </div>
       </div>
     </div>
 
-    <div class="hint">
-      Priority score is automatic. Aging points only apply when <strong>Received=YES</strong> and the item is not Done.
+    <div id="tab-orders" class="tabPanel">
+      <div class="section">
+        <h2>Book Orders</h2>
+        <div class="row">
+          <label for="orderTitle">Title</label>
+          <input id="orderTitle" type="text" placeholder="Order title / author" />
+        </div>
+        <div class="row">
+          <label for="orderVendor">Vendor</label>
+          <input id="orderVendor" type="text" placeholder="Vendor or source" />
+        </div>
+        <div class="row">
+          <label for="orderQty">Quantity</label>
+          <input id="orderQty" type="number" min="1" step="1" placeholder="1" />
+        </div>
+        <div class="row">
+          <label for="orderStatus">Status</label>
+          <select id="orderStatus">
+            <option>Requested</option>
+            <option>Ordered</option>
+            <option>Shipped</option>
+            <option>Received</option>
+          </select>
+        </div>
+        <div class="row">
+          <label for="orderPlaced">Ordered on</label>
+          <input id="orderPlaced" type="date" />
+        </div>
+        <div class="row">
+          <label for="orderExpected">Expected</label>
+          <input id="orderExpected" type="date" />
+        </div>
+        <div class="row">
+          <label for="orderNotes">Notes</label>
+          <input id="orderNotes" type="text" placeholder="Rush, funding source, etc." />
+        </div>
+
+        <div class="btnRow">
+          <button class="secondary" onclick="saveOrder()">Save order</button>
+          <button class="secondary" onclick="clearOrder()">Clear</button>
+        </div>
+
+        <div class="btnRow">
+          <button class="danger" onclick="deleteOrder()">Delete</button>
+        </div>
+      </div>
+
+      <div class="section">
+        <h2>Orders</h2>
+        <div id="ordersSummary" class="hint"></div>
+        <div class="tableWrap">
+          <table>
+            <thead>
+              <tr>
+                <th>Status</th>
+                <th>Title</th>
+                <th>Vendor</th>
+                <th>Qty</th>
+                <th>Ordered</th>
+                <th>Expected</th>
+                <th>Notes</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="ordersTable"></tbody>
+          </table>
+        </div>
+      </div>
     </div>
-
-    <h2>Item editor</h2>
-
-    <div class="row">
-      <label for="barcode">Barcode</label>
-      <input id="barcode" class="mono" type="text" placeholder="ISBN placeholder or real barcode" />
-    </div>
-
-    <div class="row">
-      <label for="title">Title</label>
-      <input id="title" type="text" placeholder="Title / Author" />
-    </div>
-
-    <div class="row">
-      <label for="received">Received</label>
-      <select id="received">
-        <option>NO</option>
-        <option>YES</option>
-      </select>
-    </div>
-
-    <h3>Processing Status (YES/NO)</h3>
-
-    <div class="row">
-      <label for="cataloged">Cataloged</label>
-      <select id="cataloged"><option>NO</option><option>YES</option></select>
-    </div>
-
-    <div class="row">
-      <label for="spine">Spine label</label>
-      <select id="spine"><option>NO</option><option>YES</option></select>
-    </div>
-
-    <div class="row">
-      <label for="covered">Covered</label>
-      <select id="covered"><option>NO</option><option>YES</option></select>
-    </div>
-
-    <h3>Context</h3>
-
-    <div class="row">
-      <label for="holdName">Hold for</label>
-      <input id="holdName" type="text" placeholder="Name (blank = no hold)" />
-    </div>
-
-    <div class="row">
-      <label for="adoptedAmt">Adopted $</label>
-      <input id="adoptedAmt" type="number" min="0" step="0.01" placeholder="0.00" />
-    </div>
-
-    <div class="row">
-      <label for="bookplate">Bookplate printed</label>
-      <select id="bookplate"><option>NO</option><option>YES</option></select>
-    </div>
-
-    <div class="row">
-      <label for="donated">Donated</label>
-      <select id="donated"><option>NO</option><option>YES</option></select>
-    </div>
-
-    <h3>Slip tracking</h3>
-
-    <div class="row">
-      <label for="slipPrinted">Slip printed</label>
-      <input id="slipPrinted" type="text" disabled />
-    </div>
-
-    <div class="row">
-      <label for="printedAt">Printed for</label>
-      <input id="printedAt" type="text" disabled />
-    </div>
-
-    <div class="btnRow">
-      <button onclick="printSlip()">Print slip</button>
-      <button class="secondary" onclick="saveItem()">Save item</button>
-    </div>
-
-    <div class="btnRow">
-      <button class="secondary" onclick="clearEditor()">Clear</button>
-      <button class="danger" onclick="deleteItem()">Delete</button>
-    </div>
-
-    <h2>Items</h2>
-    <div id="summary" class="hint"></div>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Priority</th>
-          <th>Done</th>
-          <th>Title</th>
-          <th>Barcode</th>
-          <th>Flags</th>
-          <th>Slip</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody id="itemsTable"></tbody>
-    </table>
   </div>
 
   <!-- RIGHT: receipt -->
@@ -440,9 +567,10 @@
   const $ = (id) => document.getElementById(id);
 
   const STORAGE_KEY = "bp_v2_priority";
-  const defaultData = { items: [] };
+  const defaultData = { items: [], orders: [] };
   let data = loadData();
   let activeId = null;
+  let activeOrderId = null;
 
   function loadData(){
     try{
@@ -450,6 +578,7 @@
       if(!raw) return structuredClone(defaultData);
       const parsed = JSON.parse(raw);
       parsed.items ??= [];
+      parsed.orders ??= [];
       return parsed;
     }catch{
       return structuredClone(defaultData);
@@ -459,11 +588,16 @@
   function persist(){
     localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
     renderTable();
+    renderOrders();
     syncReceipt();
   }
 
   function uid(){
     return "item_" + Math.random().toString(16).slice(2) + Date.now().toString(16);
+  }
+
+  function orderUid(){
+    return "order_" + Math.random().toString(16).slice(2) + Date.now().toString(16);
   }
 
   function isDone(it){
@@ -493,7 +627,7 @@
     return "$" + n.toFixed(2);
   }
 
-  function nowStamp(){
+ function nowStamp(){
     const d = new Date();
     return d.toLocaleString([], { year:"numeric", month:"numeric", day:"numeric", hour:"numeric", minute:"2-digit" });
   }
@@ -572,7 +706,7 @@
     return "age0";
   }
 
-  // ----------------------------
+   // ----------------------------
   // Editor
   // ----------------------------
   function getEditorItem(){
@@ -598,7 +732,7 @@
       statusSig: null,          // set on save
       updatedAt: new Date().toISOString()
     };
-  }
+ }
 
   function loadIntoEditor(it){
     activeId = it.id;
@@ -643,6 +777,71 @@
     syncReceipt();
     $("scan").focus();
   }
+
+  // ----------------------------
+  // Orders
+  // ----------------------------
+  function getEditorOrder(){
+    return {
+      id: activeOrderId || orderUid(),
+      title: $("orderTitle").value.trim(),
+      vendor: $("orderVendor").value.trim(),
+      qty: $("orderQty").value,
+      status: $("orderStatus").value,
+      orderedOn: $("orderPlaced").value,
+      expectedOn: $("orderExpected").value,
+      notes: $("orderNotes").value.trim(),
+      updatedAt: new Date().toISOString()
+    };
+  }
+
+  function loadIntoOrderEditor(order){
+    activeOrderId = order.id;
+    $("orderTitle").value = order.title || "";
+    $("orderVendor").value = order.vendor || "";
+    $("orderQty").value = order.qty || "";
+    $("orderStatus").value = order.status || "Requested";
+    $("orderPlaced").value = order.orderedOn || "";
+    $("orderExpected").value = order.expectedOn || "";
+    $("orderNotes").value = order.notes || "";
+  }
+
+  function clearOrder(){
+    activeOrderId = null;
+    $("orderTitle").value = "";
+    $("orderVendor").value = "";
+    $("orderQty").value = "";
+    $("orderStatus").value = "Requested";
+    $("orderPlaced").value = "";
+    $("orderExpected").value = "";
+    $("orderNotes").value = "";
+  }
+
+  function saveOrder(){
+    const order = getEditorOrder();
+    if(!order.title){
+      alert("Order title is required.");
+      $("orderTitle").focus();
+      return;
+    }
+
+    const idx = data.orders.findIndex(x => x.id === order.id);
+    if(idx >= 0) data.orders[idx] = order;
+    else data.orders.push(order);
+    persist();
+  }
+
+  function deleteOrder(){
+    if(!activeOrderId){
+      alert("No order loaded.");
+      return;
+    }
+    if(!confirm("Delete this order?")) return;
+    data.orders = data.orders.filter(x => x.id !== activeOrderId);
+    clearOrder();
+    persist();
+  }
+
 
   function saveItem(){
     const it = getEditorItem();
@@ -856,6 +1055,43 @@
     }
   }
 
+  function renderOrders(){
+    const tbody = $("ordersTable");
+    tbody.innerHTML = "";
+
+    const orders = [...data.orders];
+    const total = orders.length;
+    const openCount = orders.filter(order => order.status !== "Received").length;
+    $("ordersSummary").textContent = `Total orders: ${total} • Open: ${openCount}`;
+
+    orders.sort((a,b) => (b.updatedAt || "").localeCompare(a.updatedAt || ""));
+
+    for(const order of orders){
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td><span class="pill">${escapeHTML(order.status || "Requested")}</span></td>
+        <td>${escapeHTML(order.title || "")}</td>
+        <td>${escapeHTML(order.vendor || "")}</td>
+        <td>${escapeHTML(order.qty || "")}</td>
+        <td class="mono">${escapeHTML(order.orderedOn || "")}</td>
+        <td class="mono">${escapeHTML(order.expectedOn || "")}</td>
+        <td>${escapeHTML(order.notes || "")}</td>
+        <td>
+          <div class="actions">
+            <button class="smallBtn secondary" onclick="loadOrder('${order.id}')">Load</button>
+          </div>
+        </td>
+      `;
+      tbody.appendChild(tr);
+    }
+  }
+
+  function loadOrder(id){
+    const order = data.orders.find(x => x.id === id);
+    if(!order) return;
+    loadIntoOrderEditor(order);
+  }
+
   function loadById(id){
     const it = data.items.find(x => x.id === id);
     if(!it) return;
@@ -907,7 +1143,7 @@
     $("title").focus();
   });
 
-  // Live sync (receipt only)
+ // Live sync (receipt only)
   ["barcode","title","received","cataloged","spine","covered","holdName","adoptedAmt","bookplate","donated"].forEach(id => {
     $(id).addEventListener("input", syncReceipt);
     $(id).addEventListener("change", syncReceipt);
@@ -919,13 +1155,27 @@
     $(id).addEventListener("change", renderTable);
   });
 
-  // Init
+ // Init
   (function init(){
     clearEditor();
+    clearOrder();
     renderTable();
+    renderOrders();
     syncReceipt();
     $("scan").focus();
   })();
+
+  // Tabs
+  document.querySelectorAll(".tabButton").forEach(btn => {
+    btn.addEventListener("click", () => {
+      document.querySelectorAll(".tabButton").forEach(tab => tab.classList.remove("active"));
+      document.querySelectorAll(".tabPanel").forEach(panel => panel.classList.remove("active"));
+      btn.classList.add("active");
+      const target = btn.dataset.tab;
+      const panel = document.getElementById(`tab-${target}`);
+      if(panel) panel.classList.add("active");
+    });
+  });
 </script>
 </body>
 </html>
